name: hp-todo
version: 0.1.0.0
cabal-version: >=1.8
build-type: Simple
license: BSD3
license-file: LICENSE
maintainer: agocorona@gmail.com
stability: experimental
bug-reports: https://github.com/agocorona/hplay-todo/issues
synopsis: the todo application for the hplayground framework
description: See the homepage

homepage:    https://github.com/agocorona/hplay-todo
category: Web
author: Alberto Gómez Corona
data-dir: ""
extra-source-files: src/todo.hs, src/todo.html, src/base.css, src/bg.png

source-repository head
    type: git
    location: http://github.com/agocorona/hplay-todo

Flag Haste-inst
  Description: either if it is being compiled with haste-inst or with cabal
  Default: False

executable Main
   if flag(haste-inst)
    build-depends: base >4.0 && <5, haste-lib,containers,transformers,haste-perch, hplayground
    main-is: todo.hs
    buildable: True
    hs-source-dirs: src .
    ghc-options: --output-html
   else
    build-depends: base >4.0 && <5, haste-compiler,containers,transformers,haste-perch, hplayground
    main-is: todo.hs
    buildable: True
    hs-source-dirs: src .

